--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ __pycache__/
 
 # C extensions
 *.so
-
+*.idea
+*.pycharm
+*.iml
 # Distribution / packaging
 .Python
 build/
@@ -128,3 +130,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 zdf*
+temp*
+data/genomic_data/*.pt
+temp.pt
